--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -9,8 +9,31 @@
 
 <body>
     <section>
-        <h2>~ CATEGORIES ~</h2>
-        
+        <div>
+            <div>
+                <h2>CATEGORIES </h2>
+                <p>Vast and Diverse Array of Wines Is Waiting for You.</p>
+                <p>Sign up for a tasting or order delivery.</p>
+                <a href="#">Red Wine →</a>
+                <a href="#">Blanc Wine →</a>
+                <a href="#">Rose Wine →</a>
+                <p>Depending on the grapes used, the region where it is produced and the aging process, wines can vary
+                    greatly in taste, texture, and aroma.
+                    Taste different wines and select your favorite ones!</p>
+            </div>
+            <div>
+                <img width="800" src="img/categories-wallper.png">
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="img/"
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
     </section>
 
 </body>
