--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -27,12 +27,11 @@
         </div>
         <div>
             <div>
-                <img src="img/"
+                <img width="100" src="img/image-list-1.png">
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
 
     </section>
 
