--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -22,12 +22,12 @@
                     Taste different wines and select your favorite ones!</p>
             </div>
             <div>
-                <img width="800" src="img/categories-wallper.png">
+                <img width="800" src="img/categories-wallper.png" alt="Categories Wallper">
             </div>
         </div>
         <div>
             <div>
-                <img width="100" src="img/image-list-1.png">
+                <img width="100" src="img/image-list-1.png" alt="Image Iist 1">
                 <div></div>
                 <div></div>
                 <div></div>
