block section complate

--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -6,35 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<!---->
 
 <body>
-    <section>
-        <div>
-            <div>
-                <h2>CATEGORIES </h2>
-                <p>Vast and Diverse Array of Wines Is Waiting for You.</p>
-                <p>Sign up for a tasting or order delivery.</p>
-                <a href="#">Red Wine →</a>
-                <a href="#">Blanc Wine →</a>
-                <a href="#">Rose Wine →</a>
-                <p>Depending on the grapes used, the region where it is produced and the aging process, wines can vary
-                    greatly in taste, texture, and aroma.
-                    Taste different wines and select your favorite ones!</p>
-            </div>
-            <div>
-                <img width="800" src="img/categories-wallper.png" alt="Categories Wallper">
+    <section class="section-categories">
+        <div class="section-categories__categories categories">
+            <div class="categories__content">
+                <div class="categories__text">
+                    <h2 class="categories__title">CATEGORIES</h2>
+                    <p class="categories__description">Vast and Diverse Array of Wines Is Waiting for You.</p>
+                    <p class="categories__action">Sign up for a tasting or order delivery.</p>
+                    <a href="#" class="categories__link">Red Wine →</a>
+                    <a href="#" class="categories__link">Blanc Wine →</a>
+                    <a href="#" class="categories__link">Rose Wine →</a>
+                    <p class="categories__additional-info">Depending on the grapes used, the region where it is produced
+                        and the aging process, wines can vary greatly in taste, texture, and aroma. Taste different
+                        wines and select your favorite ones!</p>
+                </div>
+                <div class="categories__image">
+                    <img width="2000" src="img/categories-wallper.png" alt="Categories Wallpaper"
+                        class="categories__image-img">
+                </div>
             </div>
         </div>
-        <div>
-            <div>
-                <img width="100" src="img/image-list-1.png" alt="Image Iist 1">
-                <div></div>
-                <div></div>
-                <div></div>
+        <div class="section-categories__items">
+            <div class="section-categories__item">
+                <img width="100" src="img/image-list-1.png" alt="Image List 1" class="section-categories__item-image">
+                <h3 class="section-categories__item-title">Vintage Wines</h3>
+                <p class="section-categories__item-description">Enjoy wines bottled in the 1980s and 1990s. Taste them
+                    and order delivery.</p>
+                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
             </div>
-
+            <div class="section-categories__item">
+                <img width="100" src="img/image-list-2.png" alt="Image List 2" class="section-categories__item-image">
+                <h3 class="section-categories__item-title">The Best Grape</h3>
+                <p class="section-categories__item-description">We use only the highest quality grapes from our
+                    plantations in Texas.</p>
+                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
+            </div>
+            <div class="section-categories__item">
+                <img width="100" src="img/image-list-3.png" alt="Image List 3" class="section-categories__item-image">
+                <h3 class="section-categories__item-title">Beautiful Bottles</h3>
+                <p class="section-categories__item-description">We work with designers to create the most beautiful wine
+                    bottles.</p>
+                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
+            </div>
+            <div class="section-categories__item">
+                <img width="100" src="img/image-list-4.png" alt="Image List 4" class="section-categories__item-image">
+                <h3 class="section-categories__item-title">Interesting Tours</h3>
+                <p class="section-categories__item-description">Sign up for a tour and tasting and learn more about our
+                    wines.</p>
+                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
+            </div>
+        </div>
     </section>
-
 </body>
 
 </html>
