--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<!---->
-
+<!--Код написаний руцями, класи зробив в ChatGPT-->
 <body>
     <section class="section-categories">
         <div class="section-categories__categories categories">
