Added block 3 and upload needed images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    <!--Блок 3 | Каліберда-->
+    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-about-us.partial.html"></section>
+    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-gourman-choice.partial.html"></section>
     <!--Блок 5-->
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-categories.partial.html"></section>
 
