create new file collection.html

--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -15,9 +15,9 @@
                     <h2 class="categories__title">CATEGORIES</h2>
                     <p class="categories__description">Vast and Diverse Array of Wines Is Waiting for You.</p>
                     <p class="categories__action">Sign up for a tasting or order delivery.</p>
-                    <a href="#" class="categories__link">Red Wine →</a>
-                    <a href="#" class="categories__link">Blanc Wine →</a>
-                    <a href="#" class="categories__link">Rose Wine →</a>
+                    <a href="collection.html" class="categories__link">Red Wine →</a>
+                    <a href="collection.html" class="categories__link">Blanc Wine →</a>
+                    <a href="collection.html" class="categories__link">Rose Wine →</a>
                     <p class="categories__additional-info">Depending on the grapes used, the region where it is produced
                         and the aging process, wines can vary greatly in taste, texture, and aroma. Taste different
                         wines and select your favorite ones!</p>
