--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!--Блок 3 | Каліберда-->
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-about-us.partial.html"></section>
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-gourmand-choice.partial.html"></section>
+     <!--Блок 4 | Гриців Альбіна-->
+    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-benefits.partial.html"></section>
     <!--Блок 5-->
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-categories.partial.html"></section>
 
