correct img mistake

--- a/index.section-benefits.partial.html
+++ b/index.section-benefits.partial.html
@@ -19,7 +19,7 @@
                 <p class="benefits__description">Whether you're looking for a bottle to enjoy with a special occasion,
                     or a classic vintage for your cellar, our winery in Austin has something for everyone.</p>
                 <div class="benefits__feature">
-                    <img src="img/img_section-git config pull.rebase false4_benefits/img-Best_Varieties.svg" alt="image wine" class="benefits__feature-image">
+                    <img src="img/img_section-4_benefits/img-Best_Varieties.svg" alt="image wine" class="benefits__feature-image">
                     <h3 class="benefits__feature-title">The Best Varieties</h3>
                     <p class="benefits__feature-description">Our winemakers select the best grape varieties to create the
                         perfect bottles of wine for you to enjoy.</p>
