add wine category in collection.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-gourmand-choice.partial.html"></section>
      <!--Блок 4 | Гриців Альбіна-->
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-benefits.partial.html"></section>
-    <!--Блок 5-->
+    <!--Блок 5 | Капиця Іван -->
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-categories.partial.html"></section>
 
 </body>
