--- a/collection.html
+++ b/collection.html
@@ -13,7 +13,239 @@
 </head>
 
 <body>
-<h1> TEST</h1>
+    <section class="head-collection">
+        <div>
+            <h1>Our Collection</h1>
+            <p>Home ></p>
+            <a href="#">Our collection</a>
+        </div>
+    </section>
+    <main>
+        <section class="wine-content">
+            <div class="white-wine">
+                <div class="wine-category" id="white-wine">
+                    <h3>~ WHITE ~</h3>
+                </div>
+                <div class="left-list-wight-wine">
+                    <ul>
+                        <li class="wine-item">
+                            <p class="wine-name">2016 Jezebel PN</p>
+                            <p class="wine-description">Light fruity wine with hints of freshly-cut grass.</p>
+                            <p class="wine-price">$50</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2014 Sand & Stone</p>
+                            <p class="wine-description">Intense wine with a deep aftertaste, reminiscent of a carefree
+                                holiday.</p>
+                            <p class="wine-price">$48</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2013 Wild Card White</p>
+                            <p class="wine-description">Fortified wine, perfect for pairing with desserts.</p>
+                            <p class="wine-price">$60</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-list-wight-wine">
+                    <ul>
+                        <li class="wine-item">
+                            <p class="wine-name">2016 Texas High Plains White</p>
+                            <p class="wine-description">A fresh and light wine, great for enjoying a Texas sunset.</p>
+                            <p class="wine-price">$50</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2017 Euphoria</p>
+                            <p class="wine-description">Delight in one glass! Light and aromatic wine with a deep
+                                aftertaste.</p>
+                            <p class="wine-price">$40</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2019 Texas Chenin Blanc</p>
+                            <p class="wine-description">A versatile white wine that pleases all our guests.</p>
+                            <p class="wine-price">$47</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="red-wine">
+                <div class="wine-category" id="red-wine">
+                    <h3>~ RED ~</h3>
+                </div>
+                <div class="left-list-red-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">2016 Cabernet Sauvignon</p>
+                            <p class="wine-description">Rich and robust with intense flavors of dark fruit, black
+                                pepper, and oak.</p>
+                            <p class="wine-price">$75</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2013 Wild Card Red</p>
+                            <p class="wine-description">Bold and velvety, boasting aromas of ripe cherries, plums, and
+                                vanilla.</p>
+                            <p class="wine-price">$62</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2015 Ultimate Pinot Noir</p>
+                            <p class="wine-description">Medium-bodied with notes of blackberry, cedar, and spice.</p>
+                            <p class="wine-price">$70</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-list-red-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">2015 Texas High Plains Red</p>
+                            <p class="wine-description">Lively and elegant with flavors of ripe currants, tobacco, and
+                                chocolate.</p>
+                            <p class="wine-price">$55</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2013 The Aussie Red</p>
+                            <p class="wine-description">Rich and powerful, with aromas of black currants, figs, and
+                                herbs.</p>
+                            <p class="wine-price">$67</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2014 Grenache Syrah</p>
+                            <p class="wine-description">Deep and earthy, with hints of blackberry, oak, and licorice.
+                            </p>
+                            <p class="wine-price">$75</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="rose-wine">
+                <div class="wine-category" id="rose-wine">
+                    <h3>~ ROSE ~</h3>
+                </div>
+                <div class="left-list-rose-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">2018 Texas High Plains Rose</p>
+                            <p class="wine-description">Aromatic and floral with a splash of fruity sweetness.</p>
+                            <p class="wine-price">$43</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2017 Chef Rudy Rose</p>
+                            <p class="wine-description">Soft and supple, with notes of strawberries and cream.</p>
+                            <p class="wine-price">$52</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2015 Vitiano Rosato</p>
+                            <p class="wine-description">Balanced and smooth, with delicate aromas of ripe raspberries.
+                            </p>
+                            <p class="wine-price">$60</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-list-rose-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">2012 Winters's Hill Estate Dry Rose</p>
+                            <p class="wine-description">A light and refreshing rose with hints of citrus and peach.</p>
+                            <p class="wine-price">$55</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2014 Wolffer Estate Rose</p>
+                            <p class="wine-description">Rich and dry, with a bouquet of ripe strawberry and cranberry.
+                            </p>
+                            <p class="wine-price">$59</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">2015 Ehlers Estate Sylviane Rose</p>
+                            <p class="wine-description">Crisp and fruity, with a hint of watermelon and wildflowers.</p>
+                            <p class="wine-price">$67</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="sparkling-wine">
+                <div class="wine-category">
+                    <h3>~ SPARKLING ~</h3>
+                </div>
+                <div class="left-list-sparkling-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">Roederer Estate Brut</p>
+                            <p class="wine-description">Enjoy a light and crisp sip of bubbly with this effervescent
+                                sparkling brut.</p>
+                            <p class="wine-price">$83</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">Brundlmayer Extra Brut</p>
+                            <p class="wine-description">Indulge in a luxurious sip of bubbly with this decadent
+                                sparkling brut.</p>
+                            <p class="wine-price">$75</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-list-sparkling-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">Mumm Napa Blanc de Blancs</p>
+                            <p class="wine-description">Savor a creamy sip of bubbly with this inviting sparkling brut.
+                            </p>
+                            <p class="wine-price">$69</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">Domaine Chandon Etoile Brut</p>
+                            <p class="wine-description">Treat yourself to a fruity sip of bubbly with this delightful
+                                sparkling brut.</p>
+                            <p class="wine-price">$72</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="canned-wine">
+                <div class="wine-category">
+                    <h3>~ CANNED ~</h3>
+                </div>
+                <div class="left-list-canned-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">Prettiest Can</p>
+                            <p class="wine-description">A light and crisp blend of white grapes, perfect for a summer
+                                picnic.</p>
+                            <p class="wine-price">$13</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">PN Frico By Scarpetta</p>
+                            <p class="wine-description">A sweet and fruity blend of rosé grapes, perfect for a night
+                                out.</p>
+                            <p class="wine-price">$18</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">Ready-to-drink Malbeco</p>
+                            <p class="wine-description">A robust and flavorful Argentinian red, perfect for a night in.
+                            </p>
+                            <p class="wine-price">$15</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-list-canned-wine">
+                    <ul class="wine-list">
+                        <li class="wine-item">
+                            <p class="wine-name">Ferdinand California Albariño</p>
+                            <p class="wine-description">Refreshing and bubbly, perfect for any celebration.</p>
+                            <p class="wine-price">$15</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">Sweet Peach Sangria</p>
+                            <p class="wine-description">An exotic blend of white wine and sweet peach flavors.</p>
+                            <p class="wine-price">$17</p>
+                        </li>
+                        <li class="wine-item">
+                            <p class="wine-name">Pinot Noir Special</p>
+                            <p class="wine-description">A zesty and refreshing blend of red grapes and citrus flavors.
+                            </p>
+                            <p class="wine-price">$20</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
