--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-benefits.partial.html"></section>
     <!--Блок 5-->
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-categories.partial.html"></section>
-
+    <!--Блок 8 | Гудз Михайло-->
+    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-come-visit-us.partial.html"></section>
 </body>
 </html>
