index.section-testimonials.partial.html Блок 8

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
       data-hx-swap="outerHTML"
       data-hx-get="index.section-blog.partial.html"
     ></section>
-    <!--Блок 8 | Гудз Михайло-->
+    <!--Блок 8 | Карандашов Артем-->
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.section-testimonials.partial.html"
+    ></section>
+    <!--Блок 9 | Гудз Михайло-->
     <section
       data-hx-trigger="load"
       data-hx-swap="outerHTML"
