add about as, section our winery

--- a/about_us.html
+++ b/about_us.html
@@ -22,5 +22,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="about_us.section-our_events.partial.html">
     </section>
+         <!--Блок 8 | Валько Владислава-->
+         <section
+         data-hx-trigger="load"
+         data-hx-swap="outerHTML"
+         data-hx-get="about_us.section-our_winery.partial.html">
+     </section>
 </body>
 </html>
