--- a/about_us.section-our_winery.partial.html
+++ b/about_us.section-our_winery.partial.html
@@ -28,27 +28,50 @@
       </p>
     </div>
     <div class="winery-features">
-        <div class="winery-features__card">
-            <img width="100" src="img/img_about_us-our_winery/craft_wines.svg" alt="craft wines">
-            <p class="winery-features__title">Craft Wines</p>
-            <p class="winery-features__description">Our wines are carefully crafted and aged to perfection.</p>
-        </div>
-        <div class="winery-features__card">
-            <img width="100" src="img/img_about_us-our_winery/the_best_wine_styles.svg" alt="wine styles">
-            <p class="winery-features__title">The Best Wine Styles</p>
-            <p class="winery-features__description">Our staff will tell you more about our wines.</p>
-        </div>
-        <div class="winery-features__card">
-            <img width="100" src="img/img_about_us-our_winery/idea_for_ a_holiday.svg" alt="idea for a holiday">
-            <p class="winery-features__title">Idea for a Holiday</p>
-            <p class="winery-features__description">Pinot Noir is great for a family holiday or a romantic date.</p>
-        </div>
-        <div class="winery-features__card">
-            <img width="100" src="img/img_about_us-our_winery/great_atmosphere.svg" alt="Great Atmosphere">
-            <p class="winery-features__title">Great Atmosphere</p>
-            <p class="winery-features__description">Tastings are held in our cellars, in a relaxing atmosphere.</p>
-        </div>
+      <div class="winery-features__card">
+        <img
+          width="100"
+          src="img/img_about_us-our_winery/craft_wines.svg"
+          alt="craft wines"
+        />
+        <p class="winery-features__title">Craft Wines</p>
+        <p class="winery-features__description">
+          Our wines are carefully crafted and aged to perfection.
+        </p>
+      </div>
+      <div class="winery-features__card">
+        <img
+          width="100"
+          src="img/img_about_us-our_winery/the_best_wine_styles.svg"
+          alt="wine styles"
+        />
+        <p class="winery-features__title">The Best Wine Styles</p>
+        <p class="winery-features__description">
+          Our staff will tell you more about our wines.
+        </p>
+      </div>
+      <div class="winery-features__card">
+        <img
+          width="100"
+          src="img/img_about_us-our_winery/idea_for_ a_holiday.svg"
+          alt="idea for a holiday"
+        />
+        <p class="winery-features__title">Idea for a Holiday</p>
+        <p class="winery-features__description">
+          Pinot Noir is great for a family holiday or a romantic date.
+        </p>
+      </div>
+      <div class="winery-features__card">
+        <img
+          width="100"
+          src="img/img_about_us-our_winery/great_atmosphere.svg"
+          alt="Great Atmosphere"
+        />
+        <p class="winery-features__title">Great Atmosphere</p>
+        <p class="winery-features__description">
+          Tastings are held in our cellars, in a relaxing atmosphere.
+        </p>
+      </div>
     </div>
-
   </body>
 </html>
