--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
       data-hx-swap="outerHTML"
       data-hx-get="index.section-blog.partial.html"
     ></section>
+    <!--Блок 7 | Берчак Андрій -->
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.section-our-vineyards.partial.html"
+    ></section>
     <!--Блок 8 | Карандашов Артем-->
     <section
       data-hx-trigger="load"
