Add 'Footer' block

--- a/index.html
+++ b/index.html
@@ -65,5 +65,11 @@
       data-hx-swap="outerHTML"
       data-hx-get="index.section-come-visit-us.partial.html"
     ></section>
+    <!--Блок 13 | Берчак Андрій -->
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="common.footer.partial.html"
+    ></section>
   </body>
 </html>
