--- a/common.footer.partial.html
+++ b/common.footer.partial.html
@@ -26,7 +26,7 @@
         </p>
         <p class="footer__contact-text">CALL US</p>
         <p class="footer__contact-data">
-          <a href="tel://+12345678900">+1 (234) 567 89 00</a>
+          <a href="tel:+12345678900">+1 (234) 567 89 00</a>
         </p>
       </div>
       <div class="footer__nav-bar">
