--- a/index.section-benefits.partial.html
+++ b/index.section-benefits.partial.html
@@ -19,19 +19,19 @@
                 <p class="benefits__description">Whether you're looking for a bottle to enjoy with a special occasion,
                     or a classic vintage for your cellar, our winery in Austin has something for everyone.</p>
                 <div class="benefits__feature">
-                    <img src="img/img_section-4_benefits/img-Best_Varieties.svg" alt="image wine" class="benefits__feature-image">
+                    <img width="100" src="img/img_section-4_benefits/img-Best_Varieties.svg" alt="image wine" class="benefits__feature-image">
                     <h3 class="benefits__feature-title">The Best Varieties</h3>
                     <p class="benefits__feature-description">Our winemakers select the best grape varieties to create the
                         perfect bottles of wine for you to enjoy.</p>
                 </div>
                 <div class="benefits__feature">
-                    <img src="img/img_section-4_benefits/img-Authentic_Wines.svg" alt="image of barrels" class="benefits__feature-image">
+                    <img width="100" src="img/img_section-4_benefits/img-Authentic_Wines.svg" alt="image of barrels" class="benefits__feature-image">
                     <h3 class="benefits__feature-title">Authentic Wines</h3>
                     <p class="benefits__feature-description">All our wines have excise stamps and certificates of
                         authenticity. We are proud for each bottle of Pino Noir wine.</p>
                 </div>
                 <div class="benefits__feature">
-                    <img src="img/img_section-4_benefits/img-Native_Yeasts.svg" alt="image of grapes" class="benefits__feature-image">
+                    <img width="100" src="img/img_section-4_benefits/img-Native_Yeasts.svg" alt="image of grapes" class="benefits__feature-image">
                     <h3 class="benefits__feature-title">Native Yeasts</h3>
                     <p class="benefits__feature-description">Our wine experts rely on yeasts naturally found on grape skins
                         and in the local air to ferment the juice.</p>
