--- a/index.html
+++ b/index.html
@@ -18,58 +18,60 @@
     ></script>
   </head>
   <body>
-    <!--Блок 3 | Каліберда-->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-about-us.partial.html"
-    ></section>
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-gourmand-choice.partial.html"
-    ></section>
-    <!--Блок 4 | Гриців Альбіна-->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-benefits.partial.html"
-    ></section>
-    <!--Блок 5 | Капиця Іван -->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-categories.partial.html"
-    ></section>
-    <!--Блок 6 | Валько Владислава -->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-blog.partial.html"
-    ></section>
-    <!--Блок 7 | Берчак Андрій -->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-our-vineyards.partial.html"
-    ></section>
-    <!--Блок 8 | Карандашов Артем-->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-testimonials.partial.html"
-    ></section>
-    <!--Блок 9 | Гудз Михайло-->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="index.section-come-visit-us.partial.html"
-    ></section>
+    <main>
+      <!--Блок 3 | Каліберда-->
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-about-us.partial.html"
+      ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-gourmand-choice.partial.html"
+      ></section>
+      <!--Блок 4 | Гриців Альбіна-->
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-benefits.partial.html"
+      ></section>
+      <!--Блок 5 | Капиця Іван -->
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-categories.partial.html"
+      ></section>
+      <!--Блок 6 | Валько Владислава -->
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-blog.partial.html"
+      ></section>
+      <!--Блок 7 | Берчак Андрій -->
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-our-vineyards.partial.html"
+      ></section>
+      <!--Блок 8 | Карандашов Артем-->
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-testimonials.partial.html"
+      ></section>
+      <!--Блок 9 | Гудз Михайло-->
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.section-come-visit-us.partial.html"
+      ></section>
+    </main>
     <!--Блок 13 | Берчак Андрій -->
-    <section
+    <footer
       data-hx-trigger="load"
       data-hx-swap="outerHTML"
       data-hx-get="common.footer.partial.html"
-    ></section>
+    ></footer>
   </body>
 </html>
