--- a/common.footer.partial.html
+++ b/common.footer.partial.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="footer">
+    <footer class="footer">
       <div class="footer__text">
         <div class="footer__logo">
           <a href="index.html"
@@ -48,6 +48,6 @@
         </nav>
         <div class="footer__copyright">© Created by | All rights Reserved</div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
