replace div with section

--- a/index.section-blog.partial.html
+++ b/index.section-blog.partial.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="blog">
+    <section class="blog">
       <div class="blog__food-and-wine">
         <p class="blog__metadata">Winery | September 22, 2022</p>
         <p class="blog__title">Thanksgiving Food & Wine Pairings</p>
@@ -43,6 +43,6 @@
       <div class="blog__img-vineyard">
         <img src="img/img_section-blog/vineyard.png" alt="vineyard" />
       </div>
-    </div>
+    </section>
   </body>
 </html>
