--- a/about_us.html
+++ b/about_us.html
@@ -16,6 +16,10 @@
   ></script>
 </head>
 <body>
+    <!-- Блок 5 | Граматович Олександр-->
+    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_partners.partial.html">
+      
+    </section>
      <!--Блок 7 | Гриців Альбіна-->
     <section
         data-hx-trigger="load"
