--- a/about_us.html
+++ b/about_us.html
@@ -17,7 +17,10 @@
 </head>
 <body>
     <!-- Блок 5 | Граматович Олександр-->
-  <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_partners.partial.html">
+  <section 
+    data-hx-trigger="load" 
+    data-hx-swap="outerHTML" 
+    data-hx-get="about_us.section-our_partners.partial.html">
     
   </section>
      <!--Блок 7 | Гриців Альбіна-->
