created section "our team" and added tilde to the h1 of section "our partners"

--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <section>
         <header>
-            <h1>~PARTNERS~</h1>
-            <p>Our lovely <span>partners</span></p>
-            <p>We work with a variety of brands and shops.</p>
+            <h1>~OUR TEAM~</h1>
+            <p>Meet Our <span>Professional</span> Team.</p>
+            <p>Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
         </header>
-        <div></div>
-        <footer></footer>
     </section>
-
 </body>
-
 </html>
