--- a/about_us.html
+++ b/about_us.html
@@ -21,7 +21,13 @@
     data-hx-trigger="load" 
     data-hx-swap="outerHTML" 
     data-hx-get="about_us.section-our_partners.partial.html">
-    
+    <!-- Блок 6 | Граматович Олександр-->
+    <section
+    data-hx-trigger="load" 
+    data-hx-swap="outerHTML" 
+    data-hx-get="about_us.section-our_team.partial.html">>
+      
+    </section>
   </section>
      <!--Блок 7 | Гриців Альбіна-->
     <section
