editing file index.section-categories.partial.css

--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <!--Код написаний руцями, класи зробив в ChatGPT-->
+
 <body>
     <section class="section-categories">
         <div class="section-categories__categories categories">
@@ -15,9 +16,11 @@
                     <h2 class="categories__title">CATEGORIES</h2>
                     <p class="categories__description">Vast and Diverse Array of Wines Is Waiting for You.</p>
                     <p class="categories__action">Sign up for a tasting or order delivery.</p>
-                    <a href="collection.html#red-wine" class="categories__link">Red Wine →</a>
-                    <a href="collection.html#white-wine" class="categories__link">Blanc Wine →</a>
-                    <a href="collection.html#rose-wine" class="categories__link">Rose Wine →</a>
+                    <div class="categories__action_list">
+                        <a href="collection.html#red-wine" class="categories__link">Red Wine →</a>
+                        <a href="collection.html#white-wine" class="categories__link">Blanc Wine →</a>
+                        <a href="collection.html#rose-wine" class="categories__link">Rose Wine →</a>
+                    </div>
                     <p class="categories__additional-info">Depending on the grapes used, the region where it is produced
                         and the aging process, wines can vary greatly in taste, texture, and aroma. Taste different
                         wines and select your favorite ones!</p>
