--- a/about_us.html
+++ b/about_us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ABOUT US</title>
+    <link rel="stylesheet" href="css/about_us.css">
     <link
     rel="shortcut icon"
     href="https://placekitten.com/96/139"
