--- a/about_us.section-our_events.partial.html
+++ b/about_us.section-our_events.partial.html
@@ -12,7 +12,7 @@
         <div class="events-header">
             <h2 class="events-header__title">~ OUR EVENTS ~</h2>
             <p class="events-header__description">Join Our Events.</p>
-            <p class="events-header__description">From time to time, we hold various events in our vineyards and cellars.</p>
+            <p class="events-header__description-text">From time to time, we hold various events in our vineyards and cellars.</p>
         </div>
         <div class="event">
             <div class="event-details">
@@ -37,7 +37,8 @@
         </div>
         <div class="contact">
             <div class="contact-icon">
-                <img class="contact-icon__image" width="50" src="img/img_about_us_our_events/phone_icon.svg" alt="Phone icon">
+                <!-- <img class="contact-icon__image" width="50" src="img/img_about_us_our_events/phone_icon.svg" alt="Phone icon"> -->
+                <svg class="contact-icon__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" style="max-width:100%" height="100%"><path d="M90.1,75.1l-0.5-1c-1.4-3.3-18.6-8.3-20-8.4l-1.1,0.1c-2.1,0.4-4.4,2.3-8.9,6.2c-0.9,0.8-2.1,1-3.2,0.4  c-5.9-3.3-13.1-9.9-16.7-13.9c-3.9-4.3-8.6-11.4-10.8-17.1c-0.4-1.1,0-2.3,0.8-3.1c5.1-4.6,7.3-6.8,7.5-9.2c0.1-1.4-2.9-19.1-6-20.8  l-0.9-0.6c-2-1.3-5-3.2-8.3-2.5c-0.8,0.2-1.6,0.5-2.3,0.9C17.5,7.5,12,11.3,9.5,16.2C8,19.3,7.3,47.4,28.3,71.1  c20.8,23.5,46.5,24.5,50.3,23.7l0.1,0l0.3-0.1c5.2-1.9,9.6-6.8,11.3-8.9C93.4,82.1,91.3,77.6,90.1,75.1z" style="" fill="#bc6e44"></path></svg>
             </div>
             <div class="contact-details">
                 <p class="contact-details__label">Call Us & Join</p>
@@ -67,7 +68,7 @@
         </div>
         <div class="contact">
             <div class="contact-icon">
-                <img class="contact-icon__image" width="50" src="img/img_about_us_our_events/mail_icon.svg" alt="mail icon">
+                <svg class="contact-icon__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" style="max-width:100%" height="100%"><g style="" fill="#bc6e44"><path d="M49.999,50l47.726-35.048c-1.068-0.941-2.455-1.529-3.99-1.529H6.266c-1.536,0-2.922,0.588-3.991,1.529L49.999,50z" style="" fill="#bc6e44"></path><polygon points="29.636,45.676 0.194,24.053 0.194,67.298  " style="" fill="#bc6e44"></polygon><polygon points="70.359,45.674 99.807,67.3 99.807,24.051  " style="" fill="#bc6e44"></polygon><path d="M63.125,50.989L49.999,60.63l-13.125-9.641L0.194,77.928v2.577c0,3.354,2.719,6.072,6.072,6.072h87.468   c3.352,0,6.072-2.719,6.072-6.072v-2.577L63.125,50.989z" style="" fill="#bc6e44"></path></g></svg>
             </div>
             <div class="contact-details">
                 <p class="contact-details__label">Write us</p>
