--- a/contact_us.section-distribution.partial.html
+++ b/contact_us.section-distribution.partial.html
@@ -6,59 +6,66 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <div>
-            <h2>~ DISTRIBUTION ~</h2>
-            <p>Our Autorized Distributors.</p>
-            <p>Find a seller in your city or state.</p>
-    </div>
-    <div>
-        <div>
-            <h3>Renadi Beverages</h3>
-            <p>Tampa, FL</p>
-            <p>+1 (234) 567 89 01</p>
-            <p>renadi@email.com</p>
+    <section class="distribution">
+        <div class="distribution__header">
+            <h2 class="distribution__title">~ DISTRIBUTION ~</h2>
+            <p class="distribution__subtitle">Our Authorized Distributors.</p>
+            <p class="distribution__description">Find a seller in your city or state.</p>
         </div>
-        <div>Collo Beverages</h3>
-            <p>St. Paul, MN</p>
-            <p>+1 (234) 567 89 02</p>
-            <p>collo@email.com</p>
+        <div class="distribution__list">
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">Renadi Beverages</h3>
+                <p class="distribution__item-location">Tampa, FL</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 01</p>
+                <p class="distribution__item-email">renadi@email.com</p>
+            </div>
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">Collo Beverages</h3>
+                <p class="distribution__item-location">St. Paul, MN</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 02</p>
+                <p class="distribution__item-email">collo@email.com</p>
+            </div>
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">Thompson Wines</h3>
+                <p class="distribution__item-location">Butte, MT</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 03</p>
+                <p class="distribution__item-email">thompson@email.com</p>
+            </div>
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">Drink & Go</h3>
+                <p class="distribution__item-location">Raleigh, NC</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 04</p>
+                <p class="distribution__item-email">drinkngo@email.com</p>
+            </div>
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">Youngs Wines</h3>
+                <p class="distribution__item-location">Portland, OR</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 05</p>
+                <p class="distribution__item-email">youngsw@email.com</p>
+            </div>
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">National Beverages</h3>
+                <p class="distribution__item-location">New York, NY</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 06</p>
+                <p class="distribution__item-email">nationalb@email.com</p>
+            </div>
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">Standard Beverage</h3>
+                <p class="distribution__item-location">Lenexa, KS</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 07</p>
+                <p class="distribution__item-email">standardbev@email.com</p>
+            </div>
+            <div class="distribution__item">
+                <h3 class="distribution__item-title">Republic Distributing</h3>
+                <p class="distribution__item-location">Washington, DC</p>
+                <p class="distribution__item-contact">+1 (234) 567 89 08</p>
+                <p class="distribution__item-email">repubdis@email.com</p>
+            </div>
         </div>
-        <div>Thompson Wines</h3>
-            <p>Butte, MT</p>
-            <p>+1 (234) 567 89 03</p>
-            <p>thompson@email.com</p>
+        <div class="distribution__footer">
+            <p class="distribution__footer-text">We sell our wines through authorized distributors. They sell our wines in local shops and restaurants. If you cannot find a wine from a Pinot Noir winery in your city, contact our distributor in your state or email us.</p>
+            <p class="distribution__footer-warning">* Beware of fakes! When you buy our wine from an authorized distributor, you are sure to get an original bottle.</p>
         </div>
-        <div>Drink & Go</h3>
-            <p>Raleigh, NC</p>
-            <p>+1 (234) 567 89 04</p>
-            <p>drinkngo@email.com</p>
-        </div>
-        <div>Youngs Wines</h3>
-            <p>Portland, OR</p>
-            <p>+1 (234) 567 89 05</p>
-            <p>youngsw@email.com</p>
-        </div>
-        <div>National Beverages</h3>
-            <p>New York, NY</p>
-            <p>+1 (234) 567 89 06</p>
-            <p>nationalb@email.com</p>
-        </div>
-        <div>Standard Beverage</h3>
-            <p>Lenexa, KS</p>
-            <p>+1 (234) 567 89 07</p>
-            <p>standardbev@email.com</p>
-        </div>
-        <div>Republic Distributing</h3>
-            <p>Washington, DC</p>
-            <p>+1 (234) 567 89 08</p>
-            <p>repubdis@email.com</p>
-        </div>
-    </div>
-    <div>
-        <p>We sell our wines through authorized distributors. They sell our wines in local shops and restaurants. If you cannot find a wine from a Pinot Noir winery in your city, contact our distributor in your state or email us.</p>
-        <p>* Beware of fakes! When you buy our wine from an authorized distributor, you are sure to get an original bottle.</p>
-    </div>
     </section>
 </body>
 </html>
