add to root text color

--- a/contact_us.section-distribution.partial.html
+++ b/contact_us.section-distribution.partial.html
@@ -64,7 +64,7 @@
         </div>
         <div class="distribution__footer">
             <p class="distribution__footer-text">We sell our wines through authorized distributors. They sell our wines in local shops and restaurants. If you cannot find a wine from a Pinot Noir winery in your city, contact our distributor in your state or email us.</p>
-            <p class="distribution__footer-warning">* Beware of fakes! When you buy our wine from an authorized distributor, you are sure to get an original bottle.</p>
+            <p class="distribution__footer-warning"><span class="distribution__footer-star">*</span> Beware of fakes! When you buy our wine from an authorized distributor, you are sure to get an original bottle.</p>
         </div>
     </section>
 </body>
