--- a/about_us.section-our_partners.partial.html
+++ b/about_us.section-our_partners.partial.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <section>
-        <header>
-            <h1>~PARTNERS~</h1>
-            <p>Our lovely <span>partners</span></p>
+    <section class="our_team>
+        <header class="our_team-header">
+            <h1" class="our_team-header-title">~PARTNERS~</h1>
+            <p class="our_team-header-main_text">Our lovely <span>partners</span></p>
             <p>We work with a variety of brands and shops.</p>
         </header>
         <div></div>
