Block header in "about_us-our_partnes" was styled

--- a/about_us.section-our_partners.partial.html
+++ b/about_us.section-our_partners.partial.html
@@ -10,11 +10,13 @@
 <body>
     <section class="our_team>
         <header class="our_team-header">
-            <h1" class="our_team-header-title">~PARTNERS~</h1>
-            <p class="our_team-header-main_text">Our lovely <span>partners</span></p>
-            <p>We work with a variety of brands and shops.</p>
+            <h1" class="our_team_header-title"> <b>~PARTNERS~</b> </h1>
+            <p class="our_team-header-main_text">Our lovely <em>Partners</em> <span class="our_team-header-main_text-span">.</span></p>
+            <p class="our_team-header-description">We work with a variety of brands and shops.</p>
         </header>
-        <div></div>
+        <div class="imeges_container">
+            
+        </div>
         <footer></footer>
     </section>
 
