--- a/contact_us.html
+++ b/contact_us.html
@@ -17,6 +17,12 @@
   ></script>
 </head>
 <body>
+  <!--Блок 1-header-hero| Гриців Альбіна-->
+    <div
+    data-hx-trigger="load"
+    data-hx-swap="outerHTML"
+    data-hx-get="contact_us.header-hero.partial.html"
+      ></div>
      <!--Блок 4| Гриців Альбіна-->
     <section
       data-hx-trigger="load"
