add content in file collection.html

--- a/collection.html
+++ b/collection.html
@@ -256,7 +256,7 @@
         <section class="nearest-tasting">
             <div class="nearest-tasting__luxury-wine-img">
                 <img class="nearest-tasting__luxury-wine-img__image" width="600"
-                    src="img/img_collection/luxury-wine.webp">
+                    src="img/img_collection/luxury-wine.webp" alt="luxury wine backgraund">
             </div>
             <div class="nearest-tasting__content">
                 <div class="nearest-tasting__content__title">
@@ -350,8 +350,8 @@
             </div>
         </section>
         <section class="schedule">
-            <div>
-                <div>
+            <div class="schedule__content">
+                <div class="schedule__content__info">
                     <div>
                         <span>
                             <em>~ SCHEDULE ~</em>
@@ -360,20 +360,25 @@
                         <span>Our Tasting Room is located on the top of the hilly vineyard and offers guided tastings of
                             all
                             our great wine selections. Come visit us to enjoy our wines and relax sipping a divine drink
-                            while we take care of the rest.</span>
+                            while we
+                            take care of the rest.</span>
                     </div>
                 </div>
-                <div>
+                <div class="schedule__content__form">
                     <div>
-                        <form action="#" method="POST">
-                            <input type="text" required id="name" name="name" placeholder="Name">
-                            <input type="text" required id="number" name="number" placeholder="Phone number">
-                            <button type="submit">Send a Request</button>
-                          </form>                          
+                        <form class="schedule__content__form__form" action="#" method="POST">
+                            <input class="schedule__content__form__form__input" type="text" required id="name"
+                                name="name" placeholder="Name">
+                            <input class="schedule__content__form__form__input" type="text" required id="number"
+                                name="number" placeholder="Phone number">
+                            <button class="schedule__content__form__form__submit-button" type="submit">Send a
+                                Request</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
+
     </main>
 </body>
 
