change section class name

--- a/index.section-come-visit-us.partial.html
+++ b/index.section-come-visit-us.partial.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <section class="main__come-visit-us">
+    <section class="come-visit-us">
       <div class="come-visit-us__background-image">
         <img
           src="img/background_come-visit-us.jpg"
