add css to section of testimonial

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--Блок 1-2 | Данілевич-->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,6 +18,9 @@
     ></script>
   </head>
   <body>
+    <header>
+      <!--Блок 1-2 | Данілевич-->
+    </header>
     <main>
       <!--Блок 3 | Каліберда-->
       <section
