--- a/index.section-testimonials.partial.html
+++ b/index.section-testimonials.partial.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <div class="testimonials">
-      <h1 class="testimonials__title">
+      <h2 class="testimonials__title">
         TESTIMONIALS - Our Lovely Clients About Us
-      </h1>
+      </h2>
       <h2 class="testimonials__text">Our Lovely Clients About Us</h2>
       <p class="testimonials__intro">
         Read the testimonials of our customers to find out why so many people
@@ -52,7 +53,7 @@
           <p class="events__item--text"><strong>•</strong>Wine Tasting 2021</p>
         </div>
         <div class="events__item">
-          <img src="img/img_section_testimonials/2events_2.jfif" alt="" />
+          <img src="img/img_section_testimonials/events_2.jfif" alt="" />
           <p class="events__item--text">
             <strong>•</strong>The Best Vineyard 2022
           </p>
